Translations by sujato to translation/en/sujato/sutta/an/an5/an5.192_translation-en-sujato.json

--- a/translation/en/sujato/sutta/an/an5/an5.192_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an5/an5.192_translation-en-sujato.json
@@ -102,7 +102,7 @@
   "an5.192:13.5": "Then he seeks a fee for his teacher by legitimate means and illegitimate means. ",
   "an5.192:13.6": "By farming, trade, raising cattle, archery, government service, or one of the professions, not solely by living on alms, not scorning the alms bowl. ",
   "an5.192:14.1": "Having offered a fee for his teacher, he seeks a wife by both legitimate and illegitimate means. That is, by buying or selling, as well as accepting a brahmin woman by the pouring of water. ",
-  "an5.192:14.2": "He has sex with a brahmin woman, as well as with a woman from a caste of aristocrats, merchants, workers, outcastes, hunters, bamboo workers, chariot-makers, or waste-collectors. And he has sex with women who are pregnant, breastfeeding, or outside the fertile half of the month that starts with menstruation. ",
+  "an5.192:14.2": "He has sex with a brahmin woman, as well as with a woman from a caste of aristocrats, merchants, workers, outcastes, hunters, bamboo workers, chariot-makers, or waste-collectors. And he has sex with women who are pregnant, breastfeeding, or outside the fertile phase of the menstrual cycle. ",
   "an5.192:14.3": "His brahmin wife is there for sensual pleasure, fun, and enjoyment, as well as for procreation. ",
   "an5.192:14.4": "He earns a living by any kind of work. ",
   "an5.192:14.5": "The brahmins say to him, ",
