Translations by sujato to translation/en/sujato/sutta/dn/dn34_translation-en-sujato.json

--- a/translation/en/sujato/sutta/dn/dn34_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/dn/dn34_translation-en-sujato.json
@@ -781,7 +781,7 @@
   "dn34:2.3.34": "",
   "dn34:2.3.35": "What ten things should be developed? ",
   "dn34:2.3.36": "Ten universal dimensions of meditation. ",
-  "dn34:2.3.37": "Someone perceives the meditation on universal earth above, below, across, non-dual and limitless. ",
+  "dn34:2.3.37": "Someone perceives the meditation on universal earth above, below, across, undivided and limitless. ",
   "dn34:2.3.38": "They perceive the meditation on universal water … ",
   "dn34:2.3.39": "the meditation on universal fire … ",
   "dn34:2.3.40": "the meditation on universal air … ",
