Translations by sujato to translation/en/sujato/sutta/dn/dn34_translation-en-sujato.json

--- a/translation/en/sujato/sutta/dn/dn34_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/dn/dn34_translation-en-sujato.json
@@ -790,7 +790,7 @@
   "dn34:2.3.43": "the meditation on universal red … ",
   "dn34:2.3.44": "the meditation on universal white … ",
   "dn34:2.3.45": "the meditation on universal space … ",
-  "dn34:2.3.46": "They perceive the meditation on universal consciousness above, below, across, non-dual and limitless. ",
+  "dn34:2.3.46": "They perceive the meditation on universal consciousness above, below, across, undivided and limitless. ",
   "dn34:2.3.47": "",
   "dn34:2.3.48": "What ten things should be completely understood? ",
   "dn34:2.3.49": "Ten sense fields: ",
