--- a/translation/en/sujato/sutta/dn/dn33_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/dn/dn33_translation-en-sujato.json
@@ -1106,7 +1106,7 @@
   "dn33:3.3.33": "",
   "dn33:3.3.34": "This too is a quality that serves as protector. ",
   "dn33:3.3.35": "Ten universal dimensions of meditation. ",
-  "dn33:3.3.36": "Someone perceives the meditation on universal earth above, below, across, non-dual and limitless. ",
+  "dn33:3.3.36": "Someone perceives the meditation on universal earth above, below, across, undivided and limitless. ",
   "dn33:3.3.37": "They perceive the meditation on universal water … ",
   "dn33:3.3.38": "the meditation on universal fire … ",
   "dn33:3.3.39": "the meditation on universal air … ",
