--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -507,5 +507,6 @@
   "dn16:3.5.6": "Ali poštovani Ānanda, uprkos tome što je Blaženi načinio tako vidljiv znak, tako vidljivu sugestiju, nije bio u stanju da to razume.",
   "dn16:3.5.7": "Tako nije zamolio Blaženog:",
   "dn16:3.5.8": "„Poštovani gospodine, neka Blaženi poživi čitav eon, neka Srećni poživi čitav eon, na korist mnogima, na sreću mnogima, iz saosećanja prema ovom svetu, na dobrobit, korist i sreću božanskih i ljudskih bića”, slično nekome kome je Māra zaposeo um.",
-  "dn16:3.6.1": "Onda Blaženi reče poštovanom Ānandi:"
+  "dn16:3.6.1": "Onda Blaženi reče poštovanom Ānandi:",
+  "dn16:3.6.2": "„Idi Ānanda, "
 }
