--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -509,5 +509,6 @@
   "dn16:3.5.8": "„Poštovani gospodine, neka Blaženi poživi čitav eon, neka Srećni poživi čitav eon, na korist mnogima, na sreću mnogima, iz saosećanja prema ovom svetu, na dobrobit, korist i sreću božanskih i ljudskih bića”, slično nekome kome je Māra zaposeo um.",
   "dn16:3.6.1": "Onda Blaženi reče poštovanom Ānandi:",
   "dn16:3.6.2": "„Idi Ānanda, ",
-  "dn16:3.6.3": "vreme je da uradiš kako misliš da treba.”"
+  "dn16:3.6.3": "vreme je da uradiš kako misliš da treba.”",
+  "dn16:3.6.4": "„Da, poštovani gospodine”, odgovori Ānanda i ustade sa svog mesta. Onda se pokloni Blaženom i pazeći da mu on ostane sa desne strane, otide do obližnjeg drveta i sede u njegovo podnožje."
 }
