--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -511,5 +511,6 @@
   "dn16:3.6.2": "„Idi Ānanda, ",
   "dn16:3.6.3": "vreme je da uradiš kako misliš da treba.”",
   "dn16:3.6.4": "„Da, poštovani gospodine”, odgovori Ānanda i ustade sa svog mesta. Onda se pokloni Blaženom i pazeći da mu on ostane sa desne strane, otide do obližnjeg drveta i sede u njegovo podnožje.",
-  "dn16:3.7.0": "14. Mārin zahtev"
+  "dn16:3.7.0": "14. Mārin zahtev",
+  "dn16:3.7.1": "Onda Māra, Zli, ne zadugo pošto je Ānanda otišao, dođe do Blaženog i stade sa strane. Stojeći tako sa strane, reče mu:"
 }
