--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -515,5 +515,6 @@
   "dn16:3.7.1": "Onda Māra, Zli, ne zadugo pošto je Ānanda otišao, dođe do Blaženog i stade sa strane. Stojeći tako sa strane, reče mu:",
   "dn16:3.7.2": "„Uđite u nibbānu sada, poštovani gospodine, uđite u nibbānu, Srećni. Sada je vreme za konačno oslobođenje.",
   "dn16:3.7.3": "Blaženi je ovako rekao:",
-  "dn16:3.7.4": "’Zli, neću ući u nibbānu sve dok moji monasi ne postanu plemeniti učenici koji su obučeni, uvežbani, vešti, učeni, znaju Dhammu napamet, postupaju u skladu sa Dhammom, postupaju ispravno, čestiti su, sve dok ne ovladaju učenjem svoga učitelja, tako da su u stanju da o njemu govore, da ga izlažu, objavljuju, učvršćuju, razjašnjavaju, analiziraju, tumače i takođe pobijaju ona učenja drugih koja nisu u skladu sa Dhammom. Dakle, sve dok nisu u stanju da podučavaju ovo čudesno učenje.’"
+  "dn16:3.7.4": "’Zli, neću ući u nibbānu sve dok moji monasi ne postanu plemeniti učenici koji su obučeni, uvežbani, vešti, učeni, znaju Dhammu napamet, postupaju u skladu sa Dhammom, postupaju ispravno, čestiti su, sve dok ne ovladaju učenjem svoga učitelja, tako da su u stanju da o njemu govore, da ga izlažu, objavljuju, učvršćuju, razjašnjavaju, analiziraju, tumače i takođe pobijaju ona učenja drugih koja nisu u skladu sa Dhammom. Dakle, sve dok nisu u stanju da podučavaju ovo čudesno učenje.’",
+  "dn16:3.8.1": "I sada su, poštovani gospodine, vaši monasi upravo takvi."
 }
