Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -517,5 +517,6 @@
   "dn16:3.7.3": "Blaženi je ovako rekao:",
   "dn16:3.7.4": "’Zli, neću ući u nibbānu sve dok moji monasi ne postanu plemeniti učenici koji su obučeni, uvežbani, vešti, učeni, znaju Dhammu napamet, postupaju u skladu sa Dhammom, postupaju ispravno, čestiti su, sve dok ne ovladaju učenjem svoga učitelja, tako da su u stanju da o njemu govore, da ga izlažu, objavljuju, učvršćuju, razjašnjavaju, analiziraju, tumače i takođe pobijaju ona učenja drugih koja nisu u skladu sa Dhammom. Dakle, sve dok nisu u stanju da podučavaju ovo čudesno učenje.’",
   "dn16:3.8.1": "I sada su, poštovani gospodine, vaši monasi upravo takvi.",
-  "dn16:3.8.2": "Uđite u nibbānu sada, poštovani gospodine, uđite u nibbānu, Srećni. Sada je vreme za konačno oslobođenje."
+  "dn16:3.8.2": "Uđite u nibbānu sada, poštovani gospodine, uđite u nibbānu, Srećni. Sada je vreme za konačno oslobođenje.",
+  "dn16:3.8.3": "Blaženi je takođe ovako rekao:"
 }
