Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -520,5 +520,6 @@
   "dn16:3.8.2": "Uđite u nibbānu sada, poštovani gospodine, uđite u nibbānu, Srećni. Sada je vreme za konačno oslobođenje.",
   "dn16:3.8.3": "Blaženi je takođe ovako rekao:",
   "dn16:3.8.4": "’Zli, neću ući u nibbānu sve dok moje monahinje ne postanu plemenite učenice koje su obučene, uvežbane, vešte, učene, znaju Dhammu napamet… Dakle, sve dok nisu u stanju da podučavaju ovo čudesno učenje.’",
-  "dn16:3.8.5": "I sada su, poštovani gospodine, vaše monahinje upravo takve."
+  "dn16:3.8.5": "I sada su, poštovani gospodine, vaše monahinje upravo takve.",
+  "dn16:3.8.6": "Uđite u nibbānu sada, poštovani gospodine, uđite u nibbānu, Srećni. Sada je vreme za konačno oslobođenje."
 }
