--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -525,5 +525,6 @@
   "dn16:3.8.7": "Blaženi je takođe ovako rekao:",
   "dn16:3.8.8": "’Zli, neću ući u nibbānu sve dok moji nezaređeni sledbenici ne postanu plemeniti učenici koje su obučeni, uvežbani, vešti, učeni, znaju Dhammu napamet… Dakle, sve dok nisu u stanju da podučavaju ovo čudesno učenje.’",
   "dn16:3.8.9": "I sada su, poštovani gospodine, vaši nezaređeni sledbenici upravo takvi.",
-  "dn16:3.8.10": "Uđite u nibbānu sada, poštovani gospodine, uđite u nibbānu, Srećni. Sada je vreme za konačno oslobođenje."
+  "dn16:3.8.10": "Uđite u nibbānu sada, poštovani gospodine, uđite u nibbānu, Srećni. Sada je vreme za konačno oslobođenje.",
+  "dn16:3.8.11": "Blaženi je takođe ovako rekao:"
 }
