--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -530,5 +530,6 @@
   "dn16:3.8.12": "’Zli, neću ući u nibbānu sve dok moje nezaređene sledbenice ne postanu plemenite učenice koje su obučene, uvežbane, vešte, učene, znaju Dhammu napamet… Dakle, sve dok nisu u stanju da podučavaju ovo čudesno učenje.’",
   "dn16:3.8.13": "I sada su, poštovani gospodine, vaše nezaređene sledbenice upravo takve.",
   "dn16:3.8.14": "Uđite u nibbānu sada, poštovani gospodine, uđite u nibbānu, Srećni. Sada je vreme za konačno oslobođenje.",
-  "dn16:3.8.15": "Blaženi je takođe ovako rekao:"
+  "dn16:3.8.15": "Blaženi je takođe ovako rekao:",
+  "dn16:3.8.16": "’Zli, neću ući u nibbānu sve dok ovaj moj svetački život ne bude uspešan, prosperitetan i raširen, dostupan, poznat mnogima, dobro objašnjen božanskim i ljudskim bićima.’"
 }
