--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -535,5 +535,6 @@
   "dn16:3.8.17": "I sada je taj svetački život uspešan, prosperitetan i raširen, dostupan, poznat mnogima, dobro objašnjen božanskim i ljudskim bićima.",
   "dn16:3.8.18": "Uđite u nibbānu sada, poštovani gospodine, uđite u nibbānu, Srećni. Sada je vreme za konačno oslobođenje.”",
   "dn16:3.9.1": "Čuvši to, Blaženi ovako odgovori Māri, Zlom:",
-  "dn16:3.9.2": "„Smiri se, Zli. Nema još mnogo do Tathāgatinog konačnog oslobođenja. "
+  "dn16:3.9.2": "„Smiri se, Zli. Nema još mnogo do Tathāgatinog konačnog oslobođenja. ",
+  "dn16:3.9.3": "Tri meseca od sada, Tathāgata će ući u konačno oslobođenje.”"
 }
