Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -537,5 +537,6 @@
   "dn16:3.9.1": "Čuvši to, Blaženi ovako odgovori Māri, Zlom:",
   "dn16:3.9.2": "„Smiri se, Zli. Nema još mnogo do Tathāgatinog konačnog oslobođenja. ",
   "dn16:3.9.3": "Tri meseca od sada, Tathāgata će ući u konačno oslobođenje.”",
-  "dn16:3.10.0": "15. Napuštanje životnog toka"
+  "dn16:3.10.0": "15. Napuštanje životnog toka",
+  "dn16:3.10.1": "Tako kod Ćāpāla svetilišta Blaženi , svestan i s jasnim razumevanjem, napusti svoj životni tok."
 }
