Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -538,6 +538,6 @@
   "dn16:3.9.2": "„Smiri se, Zli. Nema još mnogo do Tathāgatinog konačnog oslobođenja. ",
   "dn16:3.9.3": "Tri meseca od sada, Tathāgata će ući u konačno oslobođenje.”",
   "dn16:3.10.0": "15. Napuštanje životnog toka",
-  "dn16:3.10.1": "Tako kod Ćāpāla svetilišta Blaženi, svestan i s jasnim razumevanjem, napusti svoj životni tok.",
+  "dn16:3.10.1": "I tako je Blaženi kod Ćāpāla svetilišta, svestan i jasno razumevajući, napustio životni tok.",
   "dn16:3.10.2": "I u tom trenutku dogodi se veliki zemljotres, snažan i zastrašujući, praćen snažnom grmljavinom."
 }
