Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -541,5 +541,6 @@
   "dn16:3.10.1": "I tako je Blaženi kod Ćāpāla svetilišta, svestan i jasno razumevajući, napustio životni tok.",
   "dn16:3.10.2": "Sa napuštanjem životnog toka Blaženog, cela zemlja iznenada zadrhta, uz silnu grmljavinu, zastašujuću, od koje se kosa dizala na glavi.",
   "dn16:3.10.3": "Onda Blaženi, razumevši značenje svega toga, izgovori ove nadahnute stihove:",
-  "dn16:3.10.4": "Neuporedivo poredeći sa daljim bivanjem,"
+  "dn16:3.10.4": "Neuporedivo poredeći sa daljim bivanjem,",
+  "dn16:3.10.5": "mudrac napusti proces postojanja."
 }
