Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -543,5 +543,6 @@
   "dn16:3.10.3": "Onda Blaženi, razumevši značenje svega toga, izgovori ove nadahnute stihove:",
   "dn16:3.10.4": "Neuporedivo poredeći sa daljim bivanjem,",
   "dn16:3.10.5": "mudrac napusti proces postojanja.",
-  "dn16:3.10.6": "U sebi zadovoljan i koncentrisan,"
+  "dn16:3.10.6": "U sebi zadovoljan i koncentrisan,",
+  "dn16:3.10.7": "kao mačem prekinu kontinuitet bivanja."
 }
