--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -495,7 +495,7 @@
   "dn16:3.2.3": "Dok je tako sedeo, Blaženi mu reče:",
   "dn16:3.2.4": "„Ānanda, divan je Vesāli, divno je svetilište kralja Udene, divno je Gotamaka svetilište, divno je Sattamba svetilište, divno je Bahuputta svetilište, divno je Sārandada svetilište, divno je Ćāpāla svetilište.",
   "dn16:3.3.1": "I ko god je razvijao, često vežbao, ovladao, temeljno praktikovao, održavao, uvećavao i na pravi način koristio četiri puta ka duhovnim moćima, ukoliko poželi, može da živi pun životni vek ili još i malo duže. ",
-  "dn16:3.3.2": "Ānanda, Tathāgata je zaista razvijao, često vežbao, ovladao, temeljno praktikovao, održavao, uvećavao i na pravi način koristio četiri osnove duhovne moći. Ukoliko poželi, on može da živi čitav eon ili ono što je od njega još preostalo.”",
+  "dn16:3.3.2": "Ānanda,\n Tathāgata je zaista razvijao, često vežbao, ovladao, temeljno \npraktikovao, održavao, uvećavao i na pravi način koristio četiri puta ka\n duhovnim moćima. Ukoliko poželi, on može da živi pun životni vek ili \njoš i malo duže.”",
   "dn16:3.4.1": "Ali poštovani Ānanda, uprkos tome što je Blaženi načinio tako vidljiv znak, tako vidljivu sugestiju, nije bio u stanju da to razume.",
   "dn16:3.4.2": "Tako nije zamolio Blaženog:",
   "dn16:3.4.3": "„Poštovani gospodine, neka Blaženi poživi čitav eon, neka Srećni poživi čitav eon, na korist mnogima, na sreću mnogima, iz saosećanja prema ovom svetu, na dobrobit, korist i sreću božanskih i ljudskih bića”, slično nekome kome je Māra zaposeo um.",
