--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -498,7 +498,7 @@
   "dn16:3.3.2": "Ānanda,\n Tathāgata je zaista razvijao, često vežbao, ovladao, temeljno \npraktikovao, održavao, uvećavao i na pravi način koristio četiri puta ka\n duhovnim moćima. Ukoliko poželi, on može da živi pun životni vek ili \njoš i malo duže.”",
   "dn16:3.4.1": "Ali poštovani Ānanda, uprkos što je Blaženi načinio tako vidljiv znak, tako vidljivu sugestiju, to nije bio u stanju da razume.",
   "dn16:3.4.2": "Tako nije zamolio Blaženog:",
-  "dn16:3.4.3": "„Poštovani gospodine, neka Blaženi poživi čitav eon, neka Srećni poživi čitav eon, na korist mnogima, na sreću mnogima, iz saosećanja prema ovom svetu, na dobrobit, korist i sreću božanskih i ljudskih bića”, slično nekome kome je Māra zaposeo um.",
+  "dn16:3.4.3": "„Poštovani gospodine, neka Blaženi živi pun životni vek, neka Srećni živi pun životni vek, na korist mnogima, na sreću mnogima, iz saosećanja prema ovom svetu, na dobrobit, korist i sreću božanstvima i ljudima”, slično nekome kome je Māra zaposeo um.",
   "dn16:3.5.1": "Po drugi put…",
   "dn16:3.5.2": "Po treći put, Blaženi reče poštovanom Ānandi:",
   "dn16:3.5.3": "„Divan je, Ānanda, Vesāli, divna su Udena, Gotamaka, Sattamba, Bahuputta i Sāradanda svetilišta, divno je Ćāpāla svetilište.",
