--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -503,7 +503,7 @@
   "dn16:3.5.2": "Po treći put, Blaženi reče poštovanom Ānandi:",
   "dn16:3.5.3": "„Ānanda, divan je Vesāli, divno je svetilište kralja Udene, divno je Gotamaka svetilište, divno je Sattamba svetilište, divno je Bahuputta svetilište, divno je Sārandada svetilište, divno je Ćāpāla svetilište.",
   "dn16:3.5.4": "I ko god je razvijao, često vežbao, ovladao, temeljno praktikovao, održavao, uvećavao i na pravi način koristio četiri puta ka duhovnim moćima, ukoliko poželi, može da živi pun životni vek ili još i malo duže. ",
-  "dn16:3.5.5": "Ānanda, Tathāgata je zaista razvijao, često vežbao, ovladao, temeljno praktikovao, održavao, uvećavao i na pravi način koristio četiri osnove duhovne moći. Ukoliko poželi, on može da živi čitav eon ili ono što je od njega još preostalo.”",
+  "dn16:3.5.5": "Ānanda,  Tathāgata je zaista razvijao, često vežbao, ovladao, temeljno  praktikovao, održavao, uvećavao i na pravi način koristio četiri puta ka  duhovnim moćima. Ukoliko poželi, on može da živi pun životni vek ili još i malo duže.”",
   "dn16:3.5.6": "Ali poštovani Ānanda, uprkos tome što je Blaženi načinio tako vidljiv znak, tako vidljivu sugestiju, nije bio u stanju da to razume.",
   "dn16:3.5.7": "Tako nije zamolio Blaženog:",
   "dn16:3.5.8": "„Poštovani gospodine, neka Blaženi poživi čitav eon, neka Srećni poživi čitav eon, na korist mnogima, na sreću mnogima, iz saosećanja prema ovom svetu, na dobrobit, korist i sreću božanskih i ljudskih bića”, slično nekome kome je Māra zaposeo um.",
