--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -510,7 +510,7 @@
   "dn16:3.6.1": "Onda Blaženi reče poštovanom Ānandi:",
   "dn16:3.6.2": "„Idi Ānanda, ",
   "dn16:3.6.3": "sada je vreme da učiniš ono što misliš da treba.”",
-  "dn16:3.6.4": "„Da, poštovani gospodine”, odgovori Ānanda i ustade sa svog mesta. Onda se pokloni Blaženom i pazeći da mu on ostane sa desne strane, otide do obližnjeg drveta i sede u njegovo podnožje.",
+  "dn16:3.6.4": "„Da, poštovani gospodine”, odgovori poštovani Ānanda i ustade sa svog mesta, pokloni se, pa pazeći da mu Blaženi ostane sa desne strane, otide do obližnjeg drveta i sede u njegovo podnožje.",
   "dn16:3.7.0": "14. Mārin zahtev",
   "dn16:3.7.1": "Onda Māra, Zli, ne zadugo pošto je Ānanda otišao, dođe do Blaženog i stade sa strane. Stojeći tako sa strane, reče mu:",
   "dn16:3.7.2": "„Uđite u nibbānu sada, poštovani gospodine, uđite u nibbānu, Srećni. Sada je vreme za konačno oslobođenje.",
