Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -512,7 +512,7 @@
   "dn16:3.6.3": "sada je vreme da učiniš ono što misliš da treba.”",
   "dn16:3.6.4": "„Da, poštovani gospodine”, odgovori poštovani Ānanda i ustade sa svog mesta, pokloni se, pa pazeći da mu Blaženi ostane sa desne strane, otide do obližnjeg drveta i sede u njegovo podnožje.",
   "dn16:3.7.0": "14. Mārin zahtev",
-  "dn16:3.7.1": "Onda Māra, Zli, ne zadugo pošto je Ānanda otišao, dođe do Blaženog i stade sa strane. Stojeći tako sa strane, reče mu:",
+  "dn16:3.7.1": "Onda Māra, Zli, ubrzo pošto je poštovani Ānanda otišao, dođe doBlaženog. Kad je stigao, stade sa strane, pa ovako reče Blaženom:",
   "dn16:3.7.2": "„Uđite u nibbānu sada, poštovani gospodine, uđite u nibbānu, Srećni. Sada je vreme za konačno oslobođenje.",
   "dn16:3.7.3": "Blaženi je ovako rekao:",
   "dn16:3.7.4": "’Zli, neću ući u nibbānu sve dok moji monasi ne postanu plemeniti učenici koji su obučeni, uvežbani, vešti, učeni, znaju Dhammu napamet, postupaju u skladu sa Dhammom, postupaju ispravno, čestiti su, sve dok ne ovladaju učenjem svoga učitelja, tako da su u stanju da o njemu govore, da ga izlažu, objavljuju, učvršćuju, razjašnjavaju, analiziraju, tumače i takođe pobijaju ona učenja drugih koja nisu u skladu sa Dhammom. Dakle, sve dok nisu u stanju da podučavaju ovo čudesno učenje.’",
