Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -514,7 +514,7 @@
   "dn16:3.7.0": "14. Mārin zahtev",
   "dn16:3.7.1": "Onda Māra, Zli, ubrzo pošto je poštovani Ānanda otišao, dođe doBlaženog. Kad je stigao, stade sa strane, pa ovako reče Blaženom:",
   "dn16:3.7.2": "„Poštovani gospodine, neka sada Blaženi uđe u parinibbānu, neka Srećni uđe u parinibbānu. Sada je vreme za parinibbānu Blaženog.",
-  "dn16:3.7.3": "Blaženi je ovako rekao:",
+  "dn16:3.7.3": "Naime, Blaženi je ranije ovako rekao:",
   "dn16:3.7.4": "’Zli, neću ući u nibbānu sve dok moji monasi ne postanu plemeniti učenici koji su obučeni, uvežbani, vešti, učeni, znaju Dhammu napamet, postupaju u skladu sa Dhammom, postupaju ispravno, čestiti su, sve dok ne ovladaju učenjem svoga učitelja, tako da su u stanju da o njemu govore, da ga izlažu, objavljuju, učvršćuju, razjašnjavaju, analiziraju, tumače i takođe pobijaju ona učenja drugih koja nisu u skladu sa Dhammom. Dakle, sve dok nisu u stanju da podučavaju ovo čudesno učenje.’",
   "dn16:3.8.1": "I sada su, poštovani gospodine, vaši monasi upravo takvi.",
   "dn16:3.8.2": "Uđite u nibbānu sada, poštovani gospodine, uđite u nibbānu, Srećni. Sada je vreme za konačno oslobođenje.",
