Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -518,7 +518,7 @@
   "dn16:3.7.4": "’Zli, neću ući u parinibbānu sve dok moji monasi nisu istinski učenici, ostvarili cilj, obučeni, samopouzdani, učeni, dobro poznaju učenje, vežbaju u skladu sa tim učenjem, zauzeli su ispravan kurs, žive u skladu sa učenjem i pošto su sve to naučili od svoga učitelja, to će i objaviti, propovedati, obznaniti, praktično pokazati, razjasniti, analizirati, učiniti lako razumljivim i – pošto su s dobrim razlogom kritikovali tvrdnje drugih koje su se pojavile – podučavati čudesnu Dhammu.’",
   "dn16:3.8.1": "I evo sada su, poštovani gospodine, vaši monasi upravo takvi.",
   "dn16:3.8.2": "Poštovani gospodine, neka sada Blaženi uđe u parinibbānu, neka Srećni uđe u parinibbānu. Sada je vreme za parinibbānu Blaženog.",
-  "dn16:3.8.3": "Blaženi je takođe ovako rekao:",
+  "dn16:3.8.3": "Blaženi je i ovo rekao:",
   "dn16:3.8.4": "’Zli, neću ući u nibbānu sve dok moje monahinje ne postanu plemenite učenice koje su obučene, uvežbane, vešte, učene, znaju Dhammu napamet… Dakle, sve dok nisu u stanju da podučavaju ovo čudesno učenje.’",
   "dn16:3.8.5": "I sada su, poštovani gospodine, vaše monahinje upravo takve.",
   "dn16:3.8.6": "Uđite u nibbānu sada, poštovani gospodine, uđite u nibbānu, Srećni. Sada je vreme za konačno oslobođenje.",
