--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -520,7 +520,7 @@
   "dn16:3.8.2": "Poštovani gospodine, neka sada Blaženi uđe u parinibbānu, neka Srećni uđe u parinibbānu. Sada je vreme za parinibbānu Blaženog.",
   "dn16:3.8.3": "Blaženi je i ovo rekao:",
   "dn16:3.8.4": "’Zli, neću ući u nibbānu sve dok moje monahinje ne postanu plemenite učenice koje su obučene, uvežbane, vešte, učene, znaju Dhammu napamet… Dakle, sve dok nisu u stanju da podučavaju ovo čudesno učenje.’",
-  "dn16:3.8.5": "I sada su vaše monahinje upravo takve.",
+  "dn16:3.8.5": "I evo sada su vaše monahinje upravo takve.",
   "dn16:3.8.6": "Poštovani gospodine, neka sada Blaženi uđe u parinibbānu, neka Srećni uđe u parinibbānu. Sada je vreme za parinibbānu Blaženog.",
   "dn16:3.8.7": "Blaženi je i ovo rekao:",
   "dn16:3.8.8": "’Zli, neću ući u nibbānu sve dok moji nezaređeni sledbenici ne postanu plemeniti učenici koje su obučeni, uvežbani, vešti, učeni, znaju Dhammu napamet… Dakle, sve dok nisu u stanju da podučavaju ovo čudesno učenje.’",
