--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -535,7 +535,7 @@
   "dn16:3.8.17": "I evo sada je taj svetački život uspešan, prosperitetan i raširen, dostupan, poznat mnogima, dobro objašnjen božanskim i ljudskim bićima.",
   "dn16:3.8.18": "Uđite u nibbānu sada, poštovani gospodine, uđite u nibbānu, Srećni. Sada je vreme za konačno oslobođenje.”",
   "dn16:3.9.1": "Čuvši to, Blaženi ovako odgovori Māri, Zlom:",
-  "dn16:3.9.2": "„Smiri se, Zli. Nema još mnogo do Tathāgatinog konačnog oslobođenja. ",
+  "dn16:3.9.2": "„Ne brini se, Zli, nije mnogo vremena ostalo do parinibbāne Blaženog.",
   "dn16:3.9.3": "Za tri meseca, računajući od sada, Tathāgata će ući u konačno oslobođenje.”",
   "dn16:3.10.0": "15. Napuštanje životnog toka",
   "dn16:3.10.1": "I tako je Blaženi kod Ćāpāla svetilišta, svestan i jasno razumevajući, napustio životni tok.",
