Translations by gnlaera to translation/pt/blurb/an-blurbs_translation-pt.json

--- a/translation/en/sujato/sutta/dn/dn33_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/dn/dn33_translation-en-sujato.json
@@ -1115,7 +1115,7 @@
   "dn33:3.3.42": "the meditation on universal red … ",
   "dn33:3.3.43": "the meditation on universal white … ",
   "dn33:3.3.44": "the meditation on universal space … ",
-  "dn33:3.3.45": "They perceive the meditation on universal consciousness above, below, across, non-dual and limitless. ",
+  "dn33:3.3.45": "They perceive the meditation on universal consciousness above, below, across, undivided and limitless. ",
   "dn33:3.3.46": "Ten ways of doing unskillful deeds: ",
   "dn33:3.3.47": "killing living creatures, stealing, and sexual misconduct; speech that’s false, divisive, harsh, or nonsensical; covetousness, ill will, and wrong view. ",
   "dn33:3.3.48": "Ten ways of doing skillful deeds: ",
