--- a/translation/pt/blurb/an-blurbs_translation-pt.json
+++ b/translation/pt/blurb/an-blurbs_translation-pt.json
@@ -1184,5 +1184,6 @@
   "an-blurbs:an10.172": "Tendo como base os dez fatores do caminho décuplo alguém pode discernir bons e maus princípios e resultados. O venerável Mahākaccāna explica em detalhes.",
   "an-blurbs:an10.173": "Tendo como base os dez fatores do caminho décuplo alguém pode discernir bons e maus princípios e resultados. Um ensinamento detalhado.",
   "an-blurbs:an10.174": "Dez formas de ação ou atitudes incorretas enraizadas na cobiça, raiva e ignorância.",
-  "an-blurbs:an10.175": "Dez formas de ação ou atitudes corretas para as quais a doutrina budista aponta e que representam uma via de libertação."
+  "an-blurbs:an10.175": "Dez formas de ação ou atitudes corretas para as quais a doutrina budista aponta e que representam uma via de libertação.",
+  "an-blurbs:an10.176": "Buda explica resume para o brâmane Cunda a purificação através do corpo, fala e mente em seus dez aspectos."
 }
