--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -11,7 +11,7 @@
   "sn12.2:2.2": "Sąlygoti neišmanymo, vienuoliai, yra valingi veiksmai.",
   "sn12.2:2.3": "Sąlygota valingų veiksmų yra sąmonė.",
   "sn12.2:2.4": "Sąlygoti sąmonės yra protas ir materiali forma.",
-  "sn12.2:2.5": "Sąlygotos vardo ir pavidalo yra šešios patyrimo sritys.",
+  "sn12.2:2.5": "Sąlygotos proto ir materialios formos yra šešios patyrimo sritys.",
   "sn12.2:2.6": "Sąlygotas šešių patyrimo sričių yra sąlytis.",
   "sn12.2:2.7": "Sąlygotas sąlyčio yra jausmo tonas.",
   "sn12.2:2.8": "Sąlygotas jausmo tono yra troškimas.",
@@ -53,13 +53,13 @@
   "sn12.2:10.1": "Ir kas, vienuoliai, yra šešios patyrimo sritys? ",
   "sn12.2:10.2": "Akies patyrimo sritis, ausies patyrimo sritis, nosies patyrimo sritis, liežuvio patyrimo sritis, kūno patyrimo sritis, proto patyrimo sritis – ",
   "sn12.2:10.3": "tai, vienuoliai, vadinama šešiomis patyrimo sritimis.",
-  "sn12.2:11.1": "Ir kas, vienuoliai, yra vardas ir pavidalas?",
+  "sn12.2:11.1": "Ir kas, vienuoliai, yra protas ir materiali forma?",
   "sn12.2:11.2": "Jausmo tonas, suvokimas, valia, sąlytis, dėmesys –",
   "sn12.2:11.3": "tai vadinama vardu. ",
   "sn12.2:11.4": "Keturi pirminiai (materijos) elementai ir materija, priklausanti nuo jų – ",
-  "sn12.2:11.5": "tai vadinama pavidalu. ",
-  "sn12.2:11.6": "Taigi, tai yra vardas, o tai yra pavidalas.",
-  "sn12.2:11.7": "Tai, vienuoliai, vadinama vardu ir pavidalu.",
+  "sn12.2:11.5": "tai vadinama materialia forma. ",
+  "sn12.2:11.6": "Taigi, tai yra protas, o tai yra materiali forma.",
+  "sn12.2:11.7": "Tai, vienuoliai, vadinama protu ir materialia forma.",
   "sn12.2:12.1": "Ir kas, vienuoliai, yra sąmonė? ",
   "sn12.2:12.2": "Vienuoliai, yra šios šešios sąmonės rūšys: ",
   "sn12.2:12.3": "akies sąmonė, ausies sąmonė, nosies sąmonė, liežuvio sąmonė, kūno sąmonė, proto sąmonė.",
