--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -546,5 +546,6 @@
   "dn16:3.10.6": "U sebi zadovoljan i koncentrisan,",
   "dn16:3.10.7": "kao mačem prekinu kontinuitet bivanja.",
   "dn16:3.11.0": "16. Uzroci zemljotresa",
-  "dn16:3.11.1": "U tom poštovani Ānanda pomisli:"
+  "dn16:3.11.1": "U tom poštovani Ānanda pomisli:",
+  "dn16:3.11.2": "„Neobičan je, neverovatan je ovaj veliki zemljotres,"
 }
