--- a/translation/pt/blurb/an-blurbs_translation-pt.json
+++ b/translation/pt/blurb/an-blurbs_translation-pt.json
@@ -1185,5 +1185,7 @@
   "an-blurbs:an10.173": "Tendo como base os dez fatores do caminho décuplo alguém pode discernir bons e maus princípios e resultados. Um ensinamento detalhado.",
   "an-blurbs:an10.174": "Dez formas de ação ou atitudes incorretas enraizadas na cobiça, raiva e ignorância.",
   "an-blurbs:an10.175": "Dez formas de ação ou atitudes corretas para as quais a doutrina budista aponta e que representam uma via de libertação.",
-  "an-blurbs:an10.176": "Buda explica resume para o brâmane Cunda a purificação através do corpo, fala e mente em seus dez aspectos."
+  "an-blurbs:an10.176": "Buda resume e explica para o brâmane Cunda a purificação através do corpo, fala e mente em seus dez aspectos.",
+  "an-blurbs:an10.177": "Buda resume e explica para o brâmane Jāṇussoṇī como a prática generosidade pode ou não ser de ajuda diferentes tipos de pessoas conforme a sua conduta moral, atitude e sabedoria.",
+  "an-blurbs:an10.211": "Dez qualidades relativas aos preceitos que destinam um indivíduo para o inferno ou para os reinos celestiais. "
 }
