--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -547,5 +547,7 @@
   "dn16:3.10.7": "kao mačem prekinu kontinuitet bivanja.",
   "dn16:3.11.0": "16. Uzroci zemljotresa",
   "dn16:3.11.1": "U tom poštovani Ānanda pomisli:",
-  "dn16:3.11.2": "„Neobičan je, neverovatan je ovaj veliki zemljotres,"
+  "dn16:3.11.2": "„Neobičan je, neverovatan je ovaj veliki zemljotres,",
+  "dn16:3.13.2": "Kojih osam?"
+}lja svoje uporište ima u vodi, voda svoje uporište ima u vazduhu, a vazduh je u prostoru. Dođe vreme kada se veliki vazduh zatalasa. Kada se veliki vazduh zatalasa, voda se zatrese. Kada se voda zatrese i zemlja se zatrese."
 }
