Translations by gnlaera to translation/pt/blurb/an-blurbs_translation-pt.json

--- a/translation/pt/blurb/an-blurbs_translation-pt.json
+++ b/translation/pt/blurb/an-blurbs_translation-pt.json
@@ -1187,5 +1187,6 @@
   "an-blurbs:an10.175": "Dez formas de ação ou atitudes corretas para as quais a doutrina budista aponta e que representam uma via de libertação.",
   "an-blurbs:an10.176": "Buda resume e explica para o brâmane Cunda a purificação através do corpo, fala e mente em seus dez aspectos.",
   "an-blurbs:an10.177": "Buda resume e explica para o brâmane Jāṇussoṇī como a prática generosidade pode ou não ser de ajuda diferentes tipos de pessoas conforme a sua conduta moral, atitude e sabedoria.",
-  "an-blurbs:an10.211": "Dez qualidades relativas aos preceitos que destinam um indivíduo para o inferno ou para os reinos celestiais. "
+  "an-blurbs:an10.211": "Dez qualidades relativas aos preceitos que destinam um indivíduo para o inferno ou para os reinos celestiais. ",
+  "an-blurbs:an10.216": "Dez qualidades relativas aos preceitos, atitude e sabedoria que determinam um renascimento entre criaturas rastejantes e assustadoras."
 }
