Restore lost changes

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -548,5 +548,40 @@
   "dn16:3.11.0": "16. Uzroci zemljotresa",
   "dn16:3.11.1": "U tom poštovani Ānanda pomisli:",
   "dn16:3.11.2": "„Neobičan je, neverovatan je ovaj veliki zemljotres,",
-  "dn16:3.13.2": "Kojih osam?"
+  "dn16:3.13.2": "Kojih osam?",
+  "dn16:3.13.3": "Ova velika zemlja svoje uporište ima u vodi, voda svoje uporište ima u vazduhu, a vazduh je u prostoru. Dođe vreme kada se veliki vazduh zatalasa. Kada se veliki vazduh zatalasa, voda se zatrese. Kada se voda zatrese i zemlja se zatrese.",
+  "dn16:3.13.4": "To je prvi razlog za tako veliki zemljotres.",
+  "dn16:3.14.1": "Takođe, ima asketa i brahmana sa psihičkim moćima, koji su ovladali svojim umom, i ima božanstava sa čudesnim moćima, velikim moćima. Kada neko od njih razvije opažaj zemlje kao veoma male i vode kao ogromne, tada je u stanju da učini da se zemlja snažno zatrese, zadrhti, pokrene.",
+  "dn16:3.14.2": "To je drugi razlog za tako veliki zemljotres.",
+  "dn16:3.15.1": "Takođe, kada se bodhisatta, svestan i sa jasnim razumevanjem, iz Tusita neba spusti u matericu svoje majke, tada se zemlja snažno zatrese, zadrhti, pokrene.",
+  "dn16:3.15.2": "To je treći razlog za tako veliki zemljotres.",
+  "dn16:3.16.1": "Takođe, kada bodhisatta izađe iz materice svoje majke, tada se zemlja snažno zatrese, zadrhti, pokrene.",
+  "dn16:3.16.2": "To je četvrti razlog za tako veliki zemljotres.",
+  "dn16:3.17.1": "Takođe, kada Tathāgata postaje potpuno probuđen, tada se zemlja snažno zatrese, zadrhti, pokrene.",
+  "dn16:3.17.2": "To je peti razlog za tako veliki zemljotres.",
+  "dn16:3.18.1": "Takođe, kada Tathāgata pokreće nenadmašni točak Dhamme, tada se zemlja snažno zatrese, zadrhti, pokrene.",
+  "dn16:3.18.2": "To je šesti razlog za tako veliki zemljotres.",
+  "dn16:3.19.1": "Takođe, kada Tathāgata, svestan i s jasnim razumevanjem, napušta svoj životni tok, tada se zemlja snažno zatrese, zadrhti, pokrene.",
+  "dn16:3.19.2": "To je sedmi razlog za tako veliki zemljotres.",
+  "dn16:3.20.1": "Takođe, Ānanda, kada Tathāgata dostigne potpuno oslobođenje, bez ostatka, tada se zemlja snažno zatrese, zadrhti, pokrene.",
+  "dn16:3.20.2": "To je osmi razlog za tako veliki zemljotres.",
+  "dn16:3.20.3": "Ovo je, Ānanda, osam razloga za tako veliki zemljotres.",
+  "dn16:3.21.0": "17. Osam zajednica",
+  "dn16:3.21.1": "Ānanda, postoji osam zajednica.",
+  "dn16:3.21.2": "Kojih osam?",
+  "dn16:3.21.3": "Zajednica plemića, brahmana, kućedomaćina, asketa, četiri velika kralja, trideset trojice, Mārina zajednica i Brahmina zajednica.",
+  "dn16:3.22.1": "I sećam se kako sam prilazio na stotine zajednica plemića.",
+  "dn16:3.22.2": "Sedeo sa njima, razgovarao, živo diskutovao.",
+  "dn16:3.22.3": "Kakav je god bio njihov izgled, takav je bio i moj. Kakav je god bio njihov glas, takav je bio i moj.",
+  "dn16:3.22.4": "I tu ih uputih, podstaknuh, nadahnuh i ohrabrih govorom o Dhammi.",
+  "dn16:3.22.5": "Dok sam im govorio oni nizu znali:",
+  "dn16:3.22.6": "’Ko to govori? Je li to božanstvo ili čovek?’",
+  "dn16:3.22.7": "Pošto sam ih uputio, podstaknuo, nadahnuo i ohrabrio govorom o Dhammi, ja bih se udaljio.",
+  "dn16:3.22.8": "A oni nizu znali:",
+  "dn16:3.22.9": "’Ko je to otišao? Je li to bilo božanstvo ili čovek?’",
+  "dn16:3.23.1": "I sećam se kako sam prilazio na stotine zajednica brahmana…",
+  "dn16:3.23.2": "kućedomaćina…",
+  "dn16:3.23.3": "asketa…",
+  "dn16:3.23.11": "I tu ih uputih, podstaknuh, nadahnuh i ohrabrih govorom o Dhammi.",
+  "dn16:3.23.12": "Dok sam im govorio oni nizu znali:"
 }
