--- a/translation/de/sabbamitta/sutta/an/an5/an5.191_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.191_translation-de-sabbamitta.json
@@ -9,7 +9,7 @@
   "an5.191:1.5": "Aber Hunde haben heutzutage nur mit Hündinnen Geschlechtsverkehr, nicht mit anderen Arten. ",
   "an5.191:1.6": "Das ist der erste brahmanische Brauch, den man heutzutage bei Hunden sieht, aber nicht bei Brahmanen. ",
   "an5.191:2.1": "In der Vergangenheit hatten die Brahmanen mit ihren Frauen nur in der fruchtbaren Phase des Zyklus Geschlechtsverkehr, nicht zu anderen Zeiten. ",
-  "an5.191:2.2": "Heutzutage haben die Brahmanen mit ihren Frauen sowohl in der fruchtbaren Monatshälfte als auch zu anderen Zeiten Geschlechtsverkehr. ",
+  "an5.191:2.2": "Heutzutage haben die Brahmanen mit ihren Frauen sowohl in der fruchtbaren Phase des Zyklus als auch zu anderen Zeiten Geschlechtsverkehr. ",
   "an5.191:2.3": "Aber Hunde haben heutzutage mit Hündinnen nur Geschlechtsverkehr, wenn diese heiß sind, nicht zu anderen Zeiten. ",
   "an5.191:2.4": "Das ist der zweite brahmanische Brauch, den man heutzutage bei Hunden sieht, aber nicht bei Brahmanen. ",
   "an5.191:3.1": "In der Vergangenheit kauften die Brahmanen ihre Frauen nicht noch verkauften sie sie. Sie lebten zusammen, weil sie sich liebten und wollten, dass ihre Familie fortbesteht. ",
