--- a/translation/de/sabbamitta/sutta/an/an5/an5.192_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.192_translation-de-sabbamitta.json
@@ -49,7 +49,7 @@
   "an5.192:8.7": "Und warum hat der Brahmane keinen Geschlechtsverkehr mit einer Stillenden? ",
   "an5.192:8.8": "Wenn ein Brahmane mit einer Stillenden Geschlechtsverkehr hätte, würde der Junge oder das Mädchen den Samen trinken. ",
   "an5.192:8.9": "Darum hat der Brahmane keinen Geschlechtsverkehr mit einer Stillenden. ",
-  "an5.192:8.10": "Und warum hat der Brahmane keinen Geschlechtsverkehr außerhalb der fruchtbaren Monatshälfte? Weil seine Brahmanin nicht zum sinnlichen Vergnügen da ist, nicht zum Spaß oder Genießen, sondern nur zur Fortpflanzung. ",
+  "an5.192:8.10": "Und warum hat der Brahmane keinen Geschlechtsverkehr außerhalb der fruchtbaren Phase des Zyklus? Weil seine Brahmanin nicht zum sinnlichen Vergnügen da ist, nicht zum Spaß oder Genießen, sondern nur zur Fortpflanzung. ",
   "an5.192:8.11": "Wenn er mit dem Geschlechtsverkehr seine Nachkommenschaft sichergestellt hat, rasiert er sich Haar und Bart, legt ockerfarbene Roben an und zieht aus dem Haus fort ins hauslose Leben. ",
   "an5.192:8.12": "Wenn er fortgezogen ist, tritt er, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin … in die zweite Vertiefung … in die dritte Vertiefung … in die vierte Vertiefung. ",
   "an5.192:8.13": "Wenn er diese vier Vertiefungen entwickelt hat, wird er, wenn der Körper auseinanderbricht, nach dem Tod, an einem guten Ort wiedergeboren werden, in einer himmlischen Welt. ",
