--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.64_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.64_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "sn1.64:1.3": "Wenn man was aufgibt, ",
   "sn1.64:1.4": "spricht man von Erlöschen?“ ",
   "sn1.64:2.1": "„Genießen fesselt die Welt. ",
-  "sn1.64:2.2": "Denken erkundet sie. ",
+  "sn1.64:2.2": "Es reist umher mittels Gedanken. ",
   "sn1.64:2.3": "Wenn man Verlangen aufgibt, ",
   "sn1.64:2.4": "spricht man von Erlöschen.“ "
 }
