Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn1/sn1.65_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.65_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.65_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "sn1.65:1.3": "Wenn man was aufgibt, ",
   "sn1.65:1.4": "sind alle Ketten zerrissen?“ ",
   "sn1.65:2.1": "„Genießen kettet die Welt an. ",
-  "sn1.65:2.2": "Denken erkundet sie. ",
+  "sn1.65:2.2": "Es reist umher mittels Gedanken. ",
   "sn1.65:2.3": "Wenn man Verlangen aufgibt, ",
   "sn1.65:2.4": "sind alle Ketten zerrissen.“ "
 }
