--- a/translation/pt/blurb/an-blurbs_translation-pt.json
+++ b/translation/pt/blurb/an-blurbs_translation-pt.json
@@ -1188,5 +1188,6 @@
   "an-blurbs:an10.176": "Buda resume e explica para o brâmane Cunda a purificação através do corpo, fala e mente em seus dez aspectos.",
   "an-blurbs:an10.177": "Buda resume e explica para o brâmane Jāṇussoṇī como a prática generosidade pode ou não ser de ajuda diferentes tipos de pessoas conforme a sua conduta moral, atitude e sabedoria.",
   "an-blurbs:an10.211": "Dez qualidades relativas aos preceitos que destinam um indivíduo para o inferno ou para os reinos celestiais. ",
-  "an-blurbs:an10.216": "Dez qualidades relativas aos preceitos, atitude e sabedoria que determinam um renascimento entre criaturas rastejantes e assustadoras."
+  "an-blurbs:an10.216": "Dez qualidades relativas aos preceitos, atitude e sabedoria que determinam um renascimento entre criaturas rastejantes e assustadoras.",
+  "an-blurbs:an10.217": "O Buda resume e explica diferentes tipos de corrupção e fracasso em termos da conduta corporal, verbal e mental. Ele também lista diferentes tipos perfeição e sucesso  em termos da conduta corporal, verbal e mental."
 }
