Translations by gnlaera to translation/pt/blurb/an-blurbs_translation-pt.json

--- a/translation/pt/blurb/an-blurbs_translation-pt.json
+++ b/translation/pt/blurb/an-blurbs_translation-pt.json
@@ -1190,5 +1190,6 @@
   "an-blurbs:an10.211": "Dez qualidades relativas aos preceitos que destinam um indivíduo para o inferno ou para os reinos celestiais. ",
   "an-blurbs:an10.216": "Dez qualidades relativas aos preceitos, atitude e sabedoria que determinam um renascimento entre criaturas rastejantes e assustadoras.",
   "an-blurbs:an10.217": "O Buda resume e explica diferentes tipos de corrupção e fracasso em termos da conduta corporal, verbal e mental, que resultam em sofrimento. Ele também lista diferentes tipos perfeição e sucesso  em termos da conduta corporal, verbal e mental, que resultam em felicidade.",
-  "an-blurbs:an10.218": "O Buda resume e explica diferentes tipos de corrupção e fracasso em termos da conduta corporal, verbal e mental, que resultam em sofrimento. Ele também lista diferentes tipos perfeição e sucesso  em termos da conduta corporal, verbal e mental, que resultam em felicidade."
+  "an-blurbs:an10.218": "O Buda resume e explica diferentes tipos de corrupção e fracasso em termos da conduta corporal, verbal e mental, que resultam em sofrimento. Ele também lista diferentes tipos perfeição e sucesso  em termos da conduta corporal, verbal e mental, que resultam em felicidade.",
+  "an-blurbs:an10.219": "A prática da libertação do coração baseada no bem-querer, na alegria altruísta, na compaixão e na  equanimidade resultam no não-retorno"
 }
