--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -583,5 +583,6 @@
   "dn16:3.23.2": "kućedomaćina…",
   "dn16:3.23.3": "asketa…",
   "dn16:3.23.11": "I tu ih uputih, podstaknuh, nadahnuh i ohrabrih govorom o Dhammi.",
-  "dn16:3.23.12": "Dok sam im govorio oni nizu znali:"
+  "dn16:3.23.12": "Dok sam im govorio oni nizu znali:",
+  "dn16:3.23.13": "’Ko to govori? Je li to božanstvo ili čovek?’"
 }
