--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -587,5 +587,6 @@
   "dn16:3.23.13": "’Ko to govori? Je li to božanstvo ili čovek?’",
   "dn16:3.23.14": "Pošto sam ih uputio, podstaknuo, nadahnuo i ohrabrio govorom o Dhammi, ja bih se udaljio.",
   "dn16:3.23.15": "A oni nizu znali:",
-  "dn16:3.23.16": "’Ko je to otišao? Je li to bilo božanstvo ili čovek?’"
+  "dn16:3.23.16": "’Ko je to otišao? Je li to bilo božanstvo ili čovek?’",
+  "dn16:3.23.17": "To su, Ānanda, osam zejednica."
 }
