--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -588,5 +588,6 @@
   "dn16:3.23.14": "Pošto sam ih uputio, podstaknuo, nadahnuo i ohrabrio govorom o Dhammi, ja bih se udaljio.",
   "dn16:3.23.15": "A oni nizu znali:",
   "dn16:3.23.16": "’Ko je to otišao? Je li to bilo božanstvo ili čovek?’",
-  "dn16:3.23.17": "To su, Ānanda, osam zejednica."
+  "dn16:3.23.17": "To su, Ānanda, osam zejednica.",
+  "dn16:3.24.0": "18. Osam načina ovladavanja umom"
 }
