Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -591,5 +591,6 @@
   "dn16:3.23.17": "To su, Ānanda, osam zejednica.",
   "dn16:3.24.0": "18. Osam načina ovladavanja umom",
   "dn16:3.24.1": "Ānanda, postoji osam načina ovladavanja umom.",
-  "dn16:3.24.2": "Kojih osam?"
+  "dn16:3.24.2": "Kojih osam?",
+  "dn16:3.25.1": "Kad neko u sebi opažajući oblike, vidi i spoljašnje oblike, male, lepe ili ružne."
 }
