--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -592,5 +592,5 @@
   "dn16:3.24.0": "18. Osam načina ovladavanja umom",
   "dn16:3.24.1": "Ānanda, postoji osam načina ovladavanja umom.",
   "dn16:3.24.2": "Kojih osam?",
-  "dn16:3.25.1": "Kad neko u sebi opažajući oblike, vidi i spoljašnje oblike, male, lepe ili ružne."
+  "dn16:3.25.1": "Kad neko u sebi opažajući oblike, vidi i spoljašnje oblike, male, lepe ili ružne. I zaključuje ovako:"
 }
