Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -599,5 +599,6 @@
   "dn16:3.26.2": "„Ovladavši njima, ja znam, ja vidim.”",
   "dn16:3.26.3": "To je drugi način.",
   "dn16:3.27.1": "Kad neko ne opažajući oblike u sebi, vidi spoljašnje oblike, male, lepe ili ružne. I zaključuje ovako:",
-  "dn16:3.27.2": "„Ovladavši njima, ja znam, ja vidim.”"
+  "dn16:3.27.2": "„Ovladavši njima, ja znam, ja vidim.”",
+  "dn16:3.27.3": "To je treći način."
 }
