Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -602,5 +602,6 @@
   "dn16:3.27.2": "„Ovladavši njima, ja znam, ja vidim.”",
   "dn16:3.27.3": "To je treći način.",
   "dn16:3.28.1": "Kad neko ne opažajući oblike u sebi, vidi spoljašnje oblike, ogromne, lepe ili ružne. I zaključuje ovako:",
-  "dn16:3.28.2": "„Ovladavši njima, ja znam, ja vidim.”"
+  "dn16:3.28.2": "„Ovladavši njima, ja znam, ja vidim.”",
+  "dn16:3.28.3": "To je četvrti oblik majstorstva."
 }
