Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -604,5 +604,6 @@
   "dn16:3.28.1": "Kad neko ne opažajući oblike u sebi, vidi spoljašnje oblike, ogromne, lepe ili ružne. I zaključuje ovako:",
   "dn16:3.28.2": "„Ovladavši njima, ja znam, ja vidim.”",
   "dn16:3.28.3": "To je četvrti oblik majstorstva.",
-  "dn16:3.29.1": "Kad neko, ne opažajući u sebi oblike, vidi spoljašnje oblike, plave, plave boje, plave spoljašnjosti, plavog sjaja."
+  "dn16:3.29.1": "Kad neko, ne opažajući u sebi oblike, vidi spoljašnje oblike, plave, plave boje, plave spoljašnjosti, plavog sjaja.",
+  "dn16:3.29.2": "Baš kao što je umā cvet plav, plave boje, plave spoljašnjosti, plavog sjaja. Ili kao što je tkanina iz Benaresa sa obe strane plava, plave boje, plave spoljašnjosti, plavog sjaja."
 }
