Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -608,5 +608,6 @@
   "dn16:3.29.2": "Baš kao što je umā cvet plav, plave boje, plave spoljašnjosti, plavog sjaja. Ili kao što je tkanina iz Benaresa sa obe strane plava, plave boje, plave spoljašnjosti, plavog sjaja.",
   "dn16:3.29.3": "Na isti način neko, ne opažajući u sebi oblike, vidi spoljašnje oblike, plave, plave boje, plave spoljašnjosti, plavog sjaja. I zaključuje ovako:",
   "dn16:3.29.4": "„Ovladavši njima, ja znam, ja vidim.”",
-  "dn16:3.29.5": "To je peti oblik majstorstva."
+  "dn16:3.29.5": "To je peti oblik majstorstva.",
+  "dn16:3.30.1": "Kad neko, ne opažajući u sebi oblike, vidi spoljašnje oblike, žute, žute boje, žute spoljašnjosti, žutog sjaja."
 }
