Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -615,5 +615,6 @@
   "dn16:3.30.4": "„Ovladavši njima, ja znam, ja vidim.”",
   "dn16:3.30.5": "To je šesti oblik majstorstva.",
   "dn16:3.31.1": "Kad neko, ne opažajući u sebi oblike, vidi spoljašnje oblike, žute, žute boje, žute spoljašnjosti, žutog sjaja.",
-  "dn16:3.31.2": "Baš kao što je bandhuđīvaka cvet crven, crvene boje, crvene spoljašnjosti, crvenog sjaja. Ili kao što je tkanina iz Benaresa sa obe strane crvena, crvene boje, crvene spoljašnjosti, crvenog sjaja."
+  "dn16:3.31.2": "Baš kao što je bandhuđīvaka cvet crven, crvene boje, crvene spoljašnjosti, crvenog sjaja. Ili kao što je tkanina iz Benaresa sa obe strane crvena, crvene boje, crvene spoljašnjosti, crvenog sjaja.",
+  "dn16:3.31.3": "Na isti način neko, ne opažajući u sebi oblike, vidi spoljašnje oblike, crvene, crvene boje, crvene spoljašnjosti, crvenog sjaja."
 }
