Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -612,7 +612,7 @@
   "dn16:3.30.1": "Kad neko, ne opažajući u sebi oblike, vidi spoljašnje oblike, žute, žute boje, žute spoljašnjosti, žutog sjaja.",
   "dn16:3.30.2": "Baš kao što je kaṇikāra cvet žut, žute boje, žute spoljašnjosti, žutog sjaja. Ili kao što je tkanina iz Benaresa sa obe strane žuta, žute boje, žute spoljašnjosti, žutog sjaja.",
   "dn16:3.30.3": "Na isti način neko, ne opažajući u sebi oblike, vidi spoljašnje oblike, žute, žute boje, žute spoljašnjosti, žutog sjaja. I zaključuje ovako:",
-  "dn16:3.30.4": "„Ovladavši njima, ja znam, ja vidim.”",
+  "dn16:3.30.4": "I zaključuje ovako: „Ovladavši njima, ja znam, ja vidim.”",
   "dn16:3.30.5": "To je šesti oblik majstorstva.",
   "dn16:3.31.1": "Kad neko, ne opažajući u sebi oblike, vidi spoljašnje oblike, žute, žute boje, žute spoljašnjosti, žutog sjaja.",
   "dn16:3.31.2": "Baš kao što je bandhuđīvaka cvet crven, crvene boje, crvene spoljašnjosti, crvenog sjaja. Ili kao što je tkanina iz Benaresa sa obe strane crvena, crvene boje, crvene spoljašnjosti, crvenog sjaja.",
